front-end/src/styles/app.scss
@import "./variables";

body {
  margin: 0;
}

#app {
  //font-family: "Avenir", Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  color: #2c3e50;
}

#nav {
  padding: 30px;
  a {
    font-weight: bold;
    color: #2c3e50;
    &.router-link-exact-active {
      color: #42b983;
    }
  }
}

.sidebar-nav {
  background: #ddd;
  border-right: black 1px solid;
}

$sidebar-item-margin: 6px;
$content-sidebar-width: 92px;

.content-sidebar {

  background-color: rgba(128, 128, 128, 0.4);
  border-radius: 2px;
  min-width: $content-sidebar-width;
  align-items: center;
  text-align: center;
  margin-bottom: 0;
  flex-direction: column;
  padding: $sidebar-item-margin;

  @media screen and (max-width: 576px) {
    flex-direction: row;
    justify-content: space-between;
    justify-items: center;
    align-content: space-evenly;
    flex-wrap: wrap;
    width: calc(100% - 4px);
    padding: 4px 4px 0 4px;
  }

  button {
    padding: 8px 0 6px 0;
    text-align: center;
    line-height: 1;
    width: 100%;
    height: 100%;

    &[class*="btn-outline"]:not(:hover) {
      background-color: $body-bg;
    }
  }

  em {
    font-size: 2.2em;
    width: auto;
  }

  span {
    display: block;
    font-size: 15px;
    padding-top: 4px;
    font-weight: bold;

    @media screen and (max-width: 576px) {
      display: inline-block;
      padding-left: 12px;
      padding-bottom: 8px;
    }
  }

  &__item {
    height: 80px;
    width: 80px;

    @media screen and (max-width: 576px) {
      flex-basis: calc(33.3% - 2px);
      padding: 0 0 4px;
      margin: 0;
      height: 100%;
    };

    &.router-link-exact-active {
      color: blue;
    }

    &--red {
      background: #a61717;
    }

    &--blue {
      background: #2F96B4;
    }
  }

  & > * + * {
    margin-top: $sidebar-item-margin;

    @media screen and (max-width: 576px) {
      margin-top: 0;
    }
  }
}

.opened-project-overview {
  flex-wrap: wrap;
  align-content: baseline;

  @media screen and (max-width: 576px) {
    justify-content: center;
  }
}

.main-logo {
  color: #fff;
  font-weight: 800;
  letter-spacing: .225em;
  transition: transform .5s ease,opacity .5s ease;
  display: inline-block;
  font-size: 0.75em;
  opacity: 1;
  padding: 0;
  position: relative;
  z-index: 1;
  font-family: "Open Sans", serif;
}

.view-project-page {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 75px);
  width: 100%;

  .router-link-active {
    color: inherit !important;
    border-bottom-color: #fff !important;
    background-color: #fff !important;
  }
}

.graph-container {
  height: 100%;
  flex-grow: 1;
  text-align: initial;
  width: 100vw;
}

.graph-visibility {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 5;
  height: 100%;
  width: 100%;
  &--hidden {
    z-index: 0;
  }
}

.view-project-page-content {
  position: relative;
  flex-grow: 1;
  border-top: 1px solid $gray-light;
}

.unauth-graph-container {
  width: 100%;
  height: 100%;
  flex-grow: 1;
  height: calc(100vh - 75px);
}

.project {
  &-router-container {
    background-color: $body-bg;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 5;
    &--hidden {
      position: relative;
      display: none;
      z-index: 0;
    }
  }

  &-sidebar-container {
    z-index: 5;
    margin: 4px 0 auto 4px;

    @media screen and (max-width: 576px) {
      width: 100%;
    }

    &__filler {
      flex-grow: 1;
      margin: auto;
      @media screen and (max-width: 576px) {
        display: none;
      }
    }
  }

  &-pane-overlay-container {
    margin: 4px auto auto auto;
    z-index: 5;

    &--left {
      margin-left: 4px;
      z-index: 6;
    }

    &--right {
      margin-right: 4px;
    }

    @media screen and (max-width: 576px) {
      margin: 4px auto 0 auto;

      &--left {
        margin-left: auto;
      }

      &--right {
        margin-right: auto;
      }
    }
  }

  &-pane-container {
    width: 100%;
    height: 100%;
    overflow: hidden;
    outline: 0;
  }

  &-graph-container {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
}

.editor-pane-instance,
.project-pane-container {
  &__modal-content {
    width: 100%;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 0.375rem;
    outline: 0;
  }

  &__modal-header {
    padding: 6px 8px 4px 8px;
  }

  &__close-button {
    text-shadow: 0 1px 0 #000;
  }
}

.add-block {
  &-container {
    text-align: left;
    background-color: #fff;

    .list-group-item:first-child {
      border-radius: 0;
    }
  }

  &--disabled {
    background-color: #ddd !important;
    color: #999 !important;
  }

  &__selector {
    display: flex;
    flex-direction: column;
    padding: 4px 8px 8px 8px;

    border-bottom: 1px solid #ccc;

    span {
      text-align: center;
      height: 60px;
      line-height: 1;
    }
  }

  &__content {
    margin-left: 8px;
    width: 100%;
  }

  &__image {
    height: 100%;
    max-height: 72px;
    max-width: 72px;
    background-color: #fff;
    object-fit: contain;
    padding: 4px;
    border-radius: 7px;
  }
}

.add-transition-container .list-group-horizontal .list-group-item,
.add-transition-container .list-group-item{
  &:first-child {
    border-radius: 0;
  }
  &:last-child {
    border-radius: 0;
  }
}

.tab-pane {
  .show-block-container {
    &__form {
      max-height: calc(100vh - 254px);
    }
  }
}

.show-block-container {
  position: relative;
  width: calc((100vw - 400px) / 2);
  min-width: 340px;
  max-width: 100vw;

  &--small {
    max-width: 500px;
  }

  &--wide {
    min-width: 640px;
  }

  &__resizer {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 8px;
    margin-left: -16px;
    background-color: rgba(0,0,0,0.15);
    cursor: ew-resize;
    &:hover {
      background-color: rgba(0,0,0,0.25);
    }
  }

  .form-group {
    margin-bottom: 0.5rem;
    padding-bottom: 8px;
  }

  &__form {
    max-height: calc(100vh - 184px);
    display: flex;
    flex-direction: column;
  }

  &__bottom-buttons {
    margin-top: 4px;
  }

  &__code-editor {
    min-height: 240px;
    height: calc(100vh - 378px);

    &--small {
      min-height: 180px;
      height: 30vh;
      margin-bottom: 4px;
    }
  }

  &__expand-button {
    margin-bottom: 4px;
  }
}

.dark-modal {
  margin: 0 -1px;
  .modal-content {
    color: $light;
    background-color: $dark;
  }

  .modal-header {
    color: $light;
    background-color: $dark;
  }
  .close {
    color: $light;
  }
  .gutter {
    background-color: #555;
  }
  &__no-offset {
    margin: auto;
  }
}

.code-modal-editor-container {
  height: calc(100vh - 59px);
}

.shift-code-block-editor {
  margin-top: -8px;
}

.deploy-pane-container {
  min-width: 300px;
  padding: 0 8px;
}

.export-project-container {
  &__content {
    height: 640px;
    width: 500px;
    margin: 0 -1px 0 -1px;
  }
}

.opened-project-graph-container {
  &__project-name {
    z-index: 1;
    color: $gray-dark;
    position: absolute;
    left: 8px;
    bottom: 0;
    text-align: left;
    pointer-events:none;
    &--demo {
      a {
        pointer-events: auto;
        max-width: 180px;
      }
    }
  }
}

.getting-started-tooltip {
  width: 500px;
}

.add-transition-container,
.add-block-container,
.add-saved-block-container {
  max-width: 500px;
  &__description {
    word-wrap: break-word;
  }
}

.add-saved-block-container {

  &__result {
    max-height: 68px;
    word-wrap: break-word;
    max-width: 400px;
    // Prevent description text from overflowing and messing up the UI
    overflow: hidden;
  }

  &__environment-variables {
    max-height: 220px;
  }

  &__description {
    max-height: 240px;
    word-wrap: break-word;
  }

  &__parent {
    max-height: calc(100vh - 176px);
  }
}

.monaco-editor {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.add-transition-container {
  text-align: left;
}

.billing-button {
  margin-left: 3px;
  margin-right: 3px;
}

.billing-main-container {
  margin-top: 100px;
}

.billing-buttons-column {
  text-align: right;
  margin-top: 2px;
  width: 200px;
}

.refinery-code-editor-container {
  min-width: 200px;
  min-height: 180px;
  overflow-y: hidden;

  &--read-only {
    .ace_scroller {
      cursor: auto;
    }
  }

  &--collapsible {
    min-width: 0;
    min-height: 0;
  }

  &__expand-button {
    position: absolute;
    bottom: 10px;
    right: 30px;
    color: #aaa;
    &:hover {
      color: #dadada;
    }
  }

  &__modal {
    height: calc(100vh - 59px);
  }
}

.ace-hack {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

// I realize this name is horrible and confusing with the lower class...
// Forgive me?
.run-lambda-pane-container {
  // This lives in the side pane
  max-width: 1100px;
  padding-left: 1em;
  padding-right: 1em;
  width: 100%;
  height: 100%;
  display: flex;
  flex-grow: 1;

  &__content {
    height: calc(100vh - 187px);
    min-width: 340px;
    width: calc(25vw);
    display: flex;
    flex-grow: 1;
    resize: both;
  }

  .run-lambda-container {
    flex-direction: column;
    min-width: 340px;
  }
}

.run-lambda-container {
  // This is the shared container between the Sidepane and the Full screen editor
  min-height: 250px;
  height: 100%;

  &__min-height {
    min-height: 240px
  }

  &__col {
    // Should force the blocks next to each other
    width: 100%;
    min-width: 340px;
    min-height: 200px;
    margin-bottom: -20px;
  }

  &__input-data {
    font-weight: bold;
    color: #656565;

    &--top-padding {
      padding-top: 24px;
    }
  }

  &__modal {
    margin-left: 8px;
  }

  &__buttons {
    margin-top: 8px;
  }

  &__expand-button {
    margin-bottom: 4px;
  }

  &__text-label {
    background-color: #1c1d18;
    border-bottom: solid 1px #3a3a3a;
    white-space: nowrap;
  }

  & button {
    white-space: nowrap;
  }
}

.logo-fit {
  width: 100%;
}

.settings-main-container {
  margin-top: 100px;
}

.view-executions-pane-container {
  padding: 8px;
}

.view-executions-list-container {
  max-height: calc(100vh - 194px);

  &__badges > .badge + .badge {
    margin-top: 4px;
  }
}

.shift-block-nastily-into-tabs {
  margin-top: -13px;
  padding-top: 15px;
}

.home {
  margin-top: 100px;
}

.modal {
  .environment-variable-cards-container {
    max-height: 76vh;

    .card-columns {
      @media (min-width: 576px) {
        column-count: 1;
      }

      @media (min-width: 992px) {
        column-count: 2;
      }

      @media (min-width: 1200px) {
        column-count: 3;
      }
    }
  }
}

.environment-variable {
  &__delete {
    margin-top: -8px;
  }

  &__card-group {
    & > * {
      padding-left: 8px !important;
      padding-right: 8px !important;
    }
  }

  &__card {
    min-width: 340px;
  }
}

.signup-modal-container {
  // Makes the content "float" which is pretty slick
  bottom: 0;
  position: absolute;
  top: 0;
}

a.disabled {
  pointer-events: none;
  cursor: default;
  color: #9a9a9a !important;
}

